--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -880,7 +880,7 @@
       "TOPIC_STEP_6_DESC2": "By default, we will keep this collapsed, but you can expand it at any time to read the entire text.",
       "TOPIC_STEP_7_TITLE": "Topic discussion",
       "TOPIC_STEP_7_DESC": "The main discussion will take place here. Anyone can post a pro or con argument, or provide some additional information.",
-      "TOPIC_STEP_7_DESC2": "Other participants can agree or disagree with arguments, and post replies or reactions.",
+      "TOPIC_STEP_7_DESC2": "Other participants can agree or disagree with arguments, and post replies or likes.",
       "TOPIC_STEP_8_TITLE": "Topic interactions",
       "HEADING_TOPIC_MOBILE": "@:COMPONENTS.TOUR.HEADING_TOPIC",
       "TOPIC_MOBILE_STEP_1_TITLE": "Topic navigation",
@@ -1408,8 +1408,8 @@
     "TOPIC_CLOSE_CONFIRM_TXT_NO_VOTE": "Voting will end, and further voting will not be possible.",
     "TOPIC_CLOSE_CONFIRM_BTN_NO": "No, don't close the topic",
     "TOPIC_CLOSE_CONFIRM_BTN_YES": "Yes, close the topic",
-    "TOPIC_COMMENT_REACTIONS_HEADING": "Topic argument reactions",
-    "TOPIC_COMMENT_REACTIONS_NO_REACTIONS_YET": "There are not yet any reactions",
+    "TOPIC_COMMENT_REACTIONS_HEADING": "Topic argument likes",
+    "TOPIC_COMMENT_REACTIONS_NO_REACTIONS_YET": "There are not yet any likes",
     "TOPIC_DELETE_CONFIRM_HEADING": "Delete topic",
     "TOPIC_DELETE_CONFIRM_TXT_ARE_YOU_SURE": "Are you sure you want to delete this topic?",
     "TOPIC_DELETE_CONFIRM_TXT_NO_UNDO": "@:MODALS.TOPIC_CLOSE_CONFIRM_TXT_NO_UNDO",
@@ -1426,8 +1426,8 @@
     "TOPIC_MEMBER_USER_DELETE_CONFIRM_TXT_ARE_YOU_SURE": "@:MODALS.GROUP_MEMBER_USER_DELETE_CONFIRM_TXT_ARE_YOU_SURE",
     "TOPIC_MEMBER_USER_DELETE_CONFIRM_NO": "@:BTN_NO",
     "TOPIC_MEMBER_USER_DELETE_CONFIRM_YES": "@:BTN_YES",
-    "TOPIC_IDEA_REACTIONS_HEADING": "Idea reactions",
-    "TOPIC_IDEA_REACTIONS_NO_REACTIONS_YET": "There are not yet any reactions",
+    "TOPIC_IDEA_REACTIONS_HEADING": "Idea likes",
+    "TOPIC_IDEA_REACTIONS_NO_REACTIONS_YET": "There are not yet any likes",
     "TOPIC_INVITE_USER_DELETE_CONFIRM_HEADING": "Delete user invite",
     "TOPIC_INVITE_USER_DELETE_CONFIRM_TXT_ARE_YOU_SURE": "Are you sure you want to delete this user's invite?",
     "TOPIC_INVITE_USER_DELETE_CONFIRM_NO": "@:BTN_NO",
@@ -1796,7 +1796,7 @@
     "TOPIC_NOTIFICATION_SETTINGS_LBL_ALL_ACTIONS": "All actions in this topic",
     "TOPIC_NOTIFICATION_SETTINGS_LBL_TOPIC_UPDATES": "Topic updates (content, status, categories, moderation, etc.)",
     "TOPIC_NOTIFICATION_SETTINGS_LBL_TOPIC_DISCUSSION": "Topic discussion (arguments, replies)",
-    "TOPIC_NOTIFICATION_SETTINGS_LBL_TOPIC_IDEATION": "Idea gathering (ideas, replies, reactions)",
+    "TOPIC_NOTIFICATION_SETTINGS_LBL_TOPIC_IDEATION": "Idea gathering (ideas, replies, likes)",
     "TOPIC_NOTIFICATION_SETTINGS_LBL_TOPIC_VOTING": "Voting",
     "TOPIC_NOTIFICATION_SETTINGS_LBL_TOPIC_FOLLOW_UP": "Action updates",
     "TOPIC_NOTIFICATION_SETTINGS_LNK_CANCEL": "@:LNK_CANCEL",
@@ -3222,36 +3222,36 @@
     "ACTIVITY_MODERATOR_DELETE_COMMENT_TOPIC": "User <em>{{userName}}</em> (moderator) has deleted an argument for topic <em>{{topicTitle}}</em>",
     "ACTIVITY_MODERATOR_DELETE_COMMENT_TOPIC_USERACTIVITYGROUP": "User <em>{{userName}}</em> (moderator) has deleted <em>{{groupCount}}</em> arguments for topic <em>{{topicTitle}}</em>",
     "ACTIVITY_USER_ADD_REPORT_COMMENT": "User <em>{{userName}}</em> has reported an argument: ",
-    "ACTIVITY_USER_CREATE_COMMENTVOTE_COMMENT_UP": "User <em>{{userName}}</em> has left a reaction <em>{{reaction}}</em> on an argument in topic: <em>{{topicTitle}}</em>",
-    "ACTIVITY_USER_CREATE_COMMENTVOTE_COMMENT_UP_ACTIVITYGROUP": "User <em>{{userName}}</em> and <em>{{groupCount}}</em> others have left a reaction <em>{{reaction}}</em> on an argument in topic: <em>{{topicTitle}}</em>",
-    "ACTIVITY_USER_CREATE_COMMENTVOTE_COMMENT_UP_USERACTIVITYGROUP": "User <em>{{userName}}</em> has left <em>{{groupCount}}</em> reactions <em>{{reaction}}</em> on an argument in topic: <em>{{topicTitle}}</em>",
-    "ACTIVITY_USER_UPDATE_COMMENTVOTE_COMMENT_UP": "User <em>{{userName}}</em> has updated their reaction on an argument in topic: <em>{{topicTitle}}</em>",
-    "ACTIVITY_USER_UPDATE_COMMENTVOTE_COMMENT_UP_ACTIVITYGROUP": "User <em>{{userName}}</em> and <em>{{groupCount}}</em> others have updated their reactions on an argument in topic: <em>{{topicTitle}}</em>",
-    "ACTIVITY_USER_UPDATE_COMMENTVOTE_COMMENT_UP_USERACTIVITYGROUP": "User <em>{{userName}}</em> has updated <em>{{groupCount}}</em> reactions on an argument in topic: <em>{{topicTitle}}</em>",
+    "ACTIVITY_USER_CREATE_COMMENTVOTE_COMMENT_UP": "User <em>{{userName}}</em> has liked an argument in topic: <em>{{topicTitle}}</em>",
+    "ACTIVITY_USER_CREATE_COMMENTVOTE_COMMENT_UP_ACTIVITYGROUP": "User <em>{{userName}}</em> and <em>{{groupCount}}</em> others have liked an argument in topic: <em>{{topicTitle}}</em>",
+    "ACTIVITY_USER_CREATE_COMMENTVOTE_COMMENT_UP_USERACTIVITYGROUP": "User <em>{{userName}}</em> has liked <em>{{groupCount}}</em> arguments in topic: <em>{{topicTitle}}</em>",
+    "ACTIVITY_USER_UPDATE_COMMENTVOTE_COMMENT_UP": "User <em>{{userName}}</em> has removed their like on an argument in topic: <em>{{topicTitle}}</em>",
+    "ACTIVITY_USER_UPDATE_COMMENTVOTE_COMMENT_UP_ACTIVITYGROUP": "User <em>{{userName}}</em> and <em>{{groupCount}}</em> others have removed their likes on an argument in topic: <em>{{topicTitle}}</em>",
+    "ACTIVITY_USER_UPDATE_COMMENTVOTE_COMMENT_UP_USERACTIVITYGROUP": "User <em>{{userName}}</em> has removed <em>{{groupCount}}</em> likes on arguments in topic: <em>{{topicTitle}}</em>",
     "ACTIVITY_USER_CREATE_COMMENTVOTE_COMMENT_DOWN": "@:ACTIVITY_FEED.ACTIVITY_USER_CREATE_COMMENTVOTE_COMMENT_UP",
     "ACTIVITY_USER_CREATE_COMMENTVOTE_COMMENT_DOWN_ACTIVITYGROUP": "@:ACTIVITY_FEED.ACTIVITY_USER_CREATE_COMMENTVOTE_COMMENT_UP_ACTIVITYGROUP",
     "ACTIVITY_USER_CREATE_COMMENTVOTE_COMMENT_DOWN_USERACTIVITYGROUP": "@:ACTIVITY_FEED.ACTIVITY_USER_CREATE_COMMENTVOTE_COMMENT_UP_USERACTIVITYGROUP",
     "ACTIVITY_USER_UPDATE_COMMENTVOTE_COMMENT_DOWN": "@:ACTIVITY_FEED.ACTIVITY_USER_UPDATE_COMMENTVOTE_COMMENT_UP",
     "ACTIVITY_USER_UPDATE_COMMENTVOTE_COMMENT_DOWN_ACTIVITYGROUP": "@:ACTIVITY_FEED.ACTIVITY_USER_UPDATE_COMMENTVOTE_COMMENT_UP_ACTIVITYGROUP",
     "ACTIVITY_USER_UPDATE_COMMENTVOTE_COMMENT_DOWN_USERACTIVITYGROUP": "@:ACTIVITY_FEED.ACTIVITY_USER_UPDATE_COMMENTVOTE_COMMENT_UP_USERACTIVITYGROUP",
-    "ACTIVITY_USER_UPDATE_COMMENTVOTE_COMMENT_REMOVE": "User <em>{{userName}}</em> has removed their reaction on an argument in topic: <em>{{topicTitle}}</em>",
-    "ACTIVITY_USER_UPDATE_COMMENTVOTE_COMMENT_REMOVE_ACTIVITYGROUP": "User <em>{{userName}}</em> and <em>{{groupCount}}</em> others have removed their reactions on an argument in topic: <em>{{topicTitle}}</em>",
-    "ACTIVITY_USER_UPDATE_COMMENTVOTE_COMMENT_REMOVE_USERACTIVITYGROUP": "User <em>{{userName}}</em> has removed <em>{{groupCount}}</em> reactions on an argument in topic: <em>{{topicTitle}}</em>",
-    "ACTIVITY_USER_CREATE_COMMENTVOTE_IDEA_UP": "User <em>{{userName}}</em> has left a reaction <em>{{reaction}}</em> on a reply for an idea in topic: <em>{{topicTitle}}</em>",
-    "ACTIVITY_USER_CREATE_COMMENTVOTE_IDEA_UP_ACTIVITYGROUP": "User <em>{{userName}}</em> and <em>{{groupCount}}</em> others have left a reaction <em>{{reaction}}</em> on a reply for an idea in topic: <em>{{topicTitle}}</em>",
-    "ACTIVITY_USER_CREATE_COMMENTVOTE_IDEA_UP_USERACTIVITYGROUP": "User <em>{{userName}}</em> has left <em>{{groupCount}}</em> reactions <em>{{reaction}}</em> on a reply for an idea in topic: <em>{{topicTitle}}</em>",
-    "ACTIVITY_USER_UPDATE_COMMENTVOTE_IDEA_UP": "User <em>{{userName}}</em> has updated their reaction on a reply for an idea in topic: <em>{{topicTitle}}</em>",
-    "ACTIVITY_USER_UPDATE_COMMENTVOTE_IDEA_UP_ACTIVITYGROUP": "User <em>{{userName}}</em> and <em>{{groupCount}}</em> others have updated their reactions on a reply for an idea in topic: <em>{{topicTitle}}</em>",
-    "ACTIVITY_USER_UPDATE_COMMENTVOTE_IDEA_UP_USERACTIVITYGROUP": "User <em>{{userName}}</em> has updated <em>{{groupCount}}</em> reactions on a reply for an idea in topic: <em>{{topicTitle}}</em>",
+    "ACTIVITY_USER_UPDATE_COMMENTVOTE_COMMENT_REMOVE": "User <em>{{userName}}</em> has removed their like on an argument in topic: <em>{{topicTitle}}</em>",
+    "ACTIVITY_USER_UPDATE_COMMENTVOTE_COMMENT_REMOVE_ACTIVITYGROUP": "User <em>{{userName}}</em> and <em>{{groupCount}}</em> others have removed their likes on an argument in topic: <em>{{topicTitle}}</em>",
+    "ACTIVITY_USER_UPDATE_COMMENTVOTE_COMMENT_REMOVE_USERACTIVITYGROUP": "User <em>{{userName}}</em> has removed <em>{{groupCount}}</em> likes on arguments in topic: <em>{{topicTitle}}</em>",
+    "ACTIVITY_USER_CREATE_COMMENTVOTE_IDEA_UP": "User <em>{{userName}}</em> has left a like on a reply for an idea in topic: <em>{{topicTitle}}</em>",
+    "ACTIVITY_USER_CREATE_COMMENTVOTE_IDEA_UP_ACTIVITYGROUP": "User <em>{{userName}}</em> and <em>{{groupCount}}</em> others have liked an idea reply in topic: <em>{{topicTitle}}</em>",
+    "ACTIVITY_USER_CREATE_COMMENTVOTE_IDEA_UP_USERACTIVITYGROUP": "User <em>{{userName}}</em> has left <em>{{groupCount}}</em> likes on an idea reply in topic: <em>{{topicTitle}}</em>",
+    "ACTIVITY_USER_UPDATE_COMMENTVOTE_IDEA_UP": "User <em>{{userName}}</em> has removed their like on an idea reply in topic: <em>{{topicTitle}}</em>",
+    "ACTIVITY_USER_UPDATE_COMMENTVOTE_IDEA_UP_ACTIVITYGROUP": "User <em>{{userName}}</em> and <em>{{groupCount}}</em> others have removed their likes on an idea reply in topic: <em>{{topicTitle}}</em>",
+    "ACTIVITY_USER_UPDATE_COMMENTVOTE_IDEA_UP_USERACTIVITYGROUP": "User <em>{{userName}}</em> has removed <em>{{groupCount}}</em> likes on idea replies in topic: <em>{{topicTitle}}</em>",
     "ACTIVITY_USER_CREATE_COMMENTVOTE_IDEA_DOWN": "@:ACTIVITY_FEED.ACTIVITY_USER_CREATE_COMMENTVOTE_IDEA_UP",
     "ACTIVITY_USER_CREATE_COMMENTVOTE_IDEA_DOWN_ACTIVITYGROUP": "@:ACTIVITY_FEED.ACTIVITY_USER_CREATE_COMMENTVOTE_IDEA_UP_ACTIVITYGROUP",
     "ACTIVITY_USER_CREATE_COMMENTVOTE_IDEA_DOWN_USERACTIVITYGROUP": "@:ACTIVITY_FEED.ACTIVITY_USER_CREATE_COMMENTVOTE_IDEA_UP_USERACTIVITYGROUP",
     "ACTIVITY_USER_UPDATE_COMMENTVOTE_IDEA_DOWN": "@:ACTIVITY_FEED.ACTIVITY_USER_UPDATE_COMMENTVOTE_IDEA_UP",
     "ACTIVITY_USER_UPDATE_COMMENTVOTE_IDEA_DOWN_ACTIVITYGROUP": "@:ACTIVITY_FEED.ACTIVITY_USER_UPDATE_COMMENTVOTE_IDEA_UP_ACTIVITYGROUP",
     "ACTIVITY_USER_UPDATE_COMMENTVOTE_IDEA_DOWN_USERACTIVITYGROUP": "@:ACTIVITY_FEED.ACTIVITY_USER_UPDATE_COMMENTVOTE_IDEA_UP_USERACTIVITYGROUP",
-    "ACTIVITY_USER_UPDATE_COMMENTVOTE_IDEA_REMOVE": "User <em>{{userName}}</em> has removed their reaction on a reply for an idea in topic: <em>{{topicTitle}}</em>",
-    "ACTIVITY_USER_UPDATE_COMMENTVOTE_IDEA_REMOVE_ACTIVITYGROUP": "User <em>{{userName}}</em> and <em>{{groupCount}}</em> others have removed their reactions on a reply for an idea in topic: <em>{{topicTitle}}</em>",
-    "ACTIVITY_USER_UPDATE_COMMENTVOTE_IDEA_REMOVE_USERACTIVITYGROUP": "User <em>{{userName}}</em> has removed <em>{{groupCount}}</em> reactions on a reply for an idea in topic: <em>{{topicTitle}}</em>",
+    "ACTIVITY_USER_UPDATE_COMMENTVOTE_IDEA_REMOVE": "User <em>{{userName}}</em> has removed their like on an idea reply in topic: <em>{{topicTitle}}</em>",
+    "ACTIVITY_USER_UPDATE_COMMENTVOTE_IDEA_REMOVE_ACTIVITYGROUP": "User <em>{{userName}}</em> and <em>{{groupCount}}</em> others have removed their likes on an idea reply in topic: <em>{{topicTitle}}</em>",
+    "ACTIVITY_USER_UPDATE_COMMENTVOTE_IDEA_REMOVE_USERACTIVITYGROUP": "User <em>{{userName}}</em> has removed <em>{{groupCount}}</em> likes on idea replies in topic: <em>{{topicTitle}}</em>",
     "ACTIVITY_COMMENTVOTE_FIELD_VALUE_UP": "up",
     "ACTIVITY_COMMENTVOTE_FIELD_VALUE_DOWN": "down",
     "ACTIVITY_COMMENTVOTE_FIELD_VALUE_REMOVE": "remove",
